# ouj-notebook-converter

./: .gitignore  README.md  pyproject.toml
scripts/: pix2text_server.py
src/ouj_notebook_converter/: __init__.py  __main__.py  cli.py  config.py
src/ouj_notebook_converter/exporters/: epub.py  markdown.py  pdf.py  plaintext.py
src/ouj_notebook_converter/pipeline/: runner.py  types.py
src/ouj_notebook_converter/pipeline/stages/: chapter_detect.py  load.py  load_pypdfium.py  math_detect.py  math_extract.py  ocr.py  post_process.py
src/ouj_notebook_converter/plugins/math/: base.py  noop.py  pix2tex_http.py  pix2text_http.py  server_manager.py
src/ouj_notebook_converter/plugins/ocr/: __init__.py  gemini.py
src/ouj_notebook_converter/utils/: hashing.py  pages.py
tests/integration/: test_end_to_end_tiny.py
tests/unit/: test_chapter_detect_body_headings.py  test_chapter_detect_ocr_toc.py  test_chapter_detect_orchestrator.py  test_chapter_detect_pdf_toc.py  test_chapter_detect_syllabus.py  test_cli.py  test_cli_split.py  test_config.py  test_exporter_epub.py  test_exporter_markdown.py  test_exporter_markdown_chapters.py  test_exporter_pdf.py  test_exporter_plaintext.py  test_gemini_ocr.py  test_load_pypdfium.py  test_math_detect.py  test_math_extract.py  test_pipeline_runner.py  test_pipeline_stages.py  test_pipeline_types.py  test_pix2text_server.py  test_plugins_math_base.py  test_plugins_math_pix2tex_http.py  test_plugins_math_pix2text_http.py  test_server_manager.py  test_utils_hashing.py  test_utils_pages.py
